<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.mainactivity.ProfileFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/profile_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:riv_corner_radius="200dp"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            app:riv_border_color="@color/white"
            app:riv_border_width="2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeImage">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                style="@style/EditText"
                android:enabled="false"
                android:inputType="textEmailAddress"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email_address"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/tv_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_address"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:enabled="false"
                android:inputType="textEmailAddress"
                style="@style/EditText"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_class"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:hint="Class"
            app:layout_constraintStart_toStartOf="@id/tv_email_address"
            app:layout_constraintTop_toBottomOf="@id/tv_email_address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_class"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:enabled="false"
                style="@style/EditText"
                android:inputType="number"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_mobile_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="Mobile Number"
            app:layout_constraintEnd_toEndOf="@id/tv_email_address"
            app:layout_constraintStart_toEndOf="@id/tv_class"
            app:layout_constraintTop_toTopOf="@id/tv_class">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                style="@style/EditText"
                android:enabled="false"
                android:inputType="number|textEmailAddress"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Address"
            app:layout_constraintEnd_toEndOf="@id/tv_mobile_number"
            app:layout_constraintStart_toStartOf="@id/tv_class"
            app:layout_constraintTop_toBottomOf="@id/tv_class">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                style="@style/EditText"
                android:inputType="textMultiLine"
                android:textColorHint="#546E7A"
                tools:ignore="MissingConstraints,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Edit"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="@id/tv_address"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />
        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/btn_edit"
            app:layout_constraintEnd_toEndOf="@id/tv_address"
            app:layout_constraintStart_toEndOf="@id/btn_edit"
            android:text="Save"
            />

        <TextView
            android:id="@+id/changeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_image"
            android:textColor="@color/purple_500"
            android:visibility="invisible"
            android:layout_margin="5dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</FrameLayout>
